Back to development: 0.2

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 CHANGES
 *******
 
+0.2 (unreleased)
+================
+
+- Nothing changed yet.
+
+
+push (unreleased)
+=================
+
+- Nothing changed yet.
+
+
 0.1 (2011-06-21)
 ================
 
